--- a/client/public/config.json
+++ b/client/public/config.json
@@ -147,20 +147,20 @@
     },
     "errorDrums": {
         "drumURLs": {
-            "kick": "samples/drums/kick.mp3",
-            "snare": "samples/drums/snare.mp3",
-            "hihat": "samples/drums/hihat.mp3",
-            "tom": "samples/drums/tom.mp3"
+            "kick": "samples/drums/kick2.mp3",
+            "snare": "samples/drums/snare2.mp3",
+            "hihat": "samples/drums/hihat2.mp3",
+            "tom": "samples/drums/tom2.mp3"
         }
     },
     "eventSamples": {
         "samples": {
-            "createAppFromTemplate": ["samples/sfx/lip.mp3", 0.014],
+            "createAppFromTemplate": ["samples/sfx/glass.mp3", 0.014],
             "generatePublishedAppDataFromSheet": ["samples/sfx/chime.mp3", 0],
-            "deleteApp": ["samples/sfx/zap.mp3", 0],
+            "deleteApp": ["samples/sfx/sub.mp3", 0],
             "inAppPurchase": ["samples/sfx/coin.mp3", 0.096],
-            "triggerAppWebhookAction": ["samples/sfx/knife.mp3", 0.57],
-            "triggerZap": ["samples/sfx/laser.mp3", 0.017],
+            "triggerAppWebhookAction": ["samples/sfx/pop.mp3", 0.57],
+            "triggerZap": ["samples/sfx/sub.mp3", 0.017],
             "reportApp": ["samples/sfx/pipes.mp3", 0],
             "sendShareSMS": ["samples/sfx/drip.mp3", 0.065],
             "exportAppData": ["samples/sfx/splash.mp3", 0]
